# etoEngine

./: CMakeLists.txt  helloTriangle.hpp  helloTriangleConfig.h  helloTriangleConfig.h.in  main.cpp
include/: helloTriangle.hpp  helloTriangleConfig.h  helloTriangleConfig.h.in
src/: main.cpp
